# yoink-music

./: README.md  pyproject.toml
src/yoink_music/: activity.py  config.py  downloader.py  emoji_ids.py  platforms.py  plugin.py  resolver.py  types.py  utils.py
src/yoink_music/adapters/: apple_music.py  bandcamp.py  deezer.py  qobuz.py  soundcloud.py  spotify.py  tidal.py  yandex.py  ytmusic.py
src/yoink_music/api/: router.py
src/yoink_music/commands/: __init__.py  inline.py  link.py
src/yoink_music/parsers/: apple_music.py  artist.py  bandcamp.py  deezer.py  qobuz.py  soundcloud.py  spotify.py  tidal.py  yandex.py  youtube.py  ytmusic.py
src/yoink_music/storage/: models.py
